command processing, faulty jar flag with trailing space